Changed note text colour

--- a/style.css
+++ b/style.css
@@ -22,9 +22,9 @@
   background-color: purple;
 }
 
-.text {
+.light-text {
   font-family: monospace;
-  color: darkgreen;
+  color: aliceblue;
 }
 
 .question {
